--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 *.json
 *.jsonl
 output.txt
+*.pkl
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -38,6 +39,8 @@ bld/
 [Oo]ut/
 [Ll]og/
 [Ll]ogs/
+Models/
+Datasets/
 
 # Build results on 'Bin' directories
 **/[Bb]in/*
